style: Fix .toggle-password align-self, needed prefix 'flex'
Was working in FireFox, webkib browsers it was not hoewever

--- a/client/style.css
+++ b/client/style.css
@@ -205,6 +205,7 @@ input[type="number"] {
   margin-bottom: -10px;
   border-bottom: none;
   margin-right: 10px;
+  align-self: flex-end;
 }
 
 /* ********** */
